# HYDRO-STATIC

./: CMakeLists.txt  justfile
Core/: CMakeLists.txt
Core/Source/: App.cpp  App.h  ILayer.h  Log.cpp  Log.h  Node.h  NodeHandle.h  SceneTree.cpp  SceneTree.h
Core/Source/Nodes/: Node.h
Core/Source/Utils/: Log.cpp  Log.h
src/: main.cpp
src/Engine/: Log.cpp  Log.hpp
src/Engine/Core/: Node.hpp  NodeHandle.hpp  SceneTree.cpp  SceneTree.hpp
